removing style from index.html fixes but breaks input on detailed questions

--- a/src/Styles/output.css
+++ b/src/Styles/output.css
@@ -1549,3 +1549,12 @@ body {
 .group:active .group-active\:opacity-50 {
   opacity: 0.5;
 }
+
+.mask-with-browser-support {
+  mask: linear-gradient(black, black), linear-gradient(black, black);
+  mask-clip: content-box, border-box;
+  mask-composite: exclude;
+  -webkit-mask: linear-gradient(black, black) content-box, linear-gradient(black, black);
+  -webkit-mask-clip: content-box, border-box;
+  -webkit-mask-composite: xor;
+}
